--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet" />
     <title>Raghav.io</title>
   </head>
   <body>
+    <div id="menu-container">
+      <h1 class="title-text">RAGHAV.io</h1>
+      <div class="flex-center" id="menu-details-container">
+        <form id="details-form">
+          <input
+            aria-required="true"
+            id="name-input"
+            class="text-input"
+            type="text"
+            placeholder="Enter name"
+            maxlength="32"
+            autocomplete="username"
+            name="username"
+          />
+          <input
+            aria-required="true"
+            id="game-id-input"
+            class="text-input"
+            type="text"
+            placeholder="Enter game id"
+            maxlength="32"
+            name="gameId"
+          />
+          <button type="submit" class="menu-button" id="details-form-submit-btn">Enter Game</button>
+        </form>
+      </div>
+    </div>
     <canvas id="game"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
