Add vite config and some SEO

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet" />
+    <!-- SEO -->
     <title>Raghav.io</title>
+    <meta name="description" content="Raghav.io is an online, multiplayer .io shooter game" />
+    <meta name="og:title" property="og:title" content="Raghav.io — an online, multiplayer .io shooter game" />
   </head>
   <body>
     <div id="start-menu">
