--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,28 +17,52 @@
       <div id="menu-container">
         <h1 class="title-text">RAGHAV.io</h1>
         <div class="flex-center" id="menu-details-container">
-          <form id="details-form">
-            <input
-              aria-required="true"
-              id="name-input"
-              class="text-input"
-              type="text"
-              placeholder="Enter name"
-              maxlength="32"
-              autocomplete="username"
-              name="username"
-            />
-            <input
-              aria-required="true"
-              id="game-id-input"
-              class="text-input"
-              type="text"
-              placeholder="Enter game id"
-              maxlength="32"
-              name="gameId"
-            />
-            <button type="submit" class="menu-button" id="details-form-submit-btn">Enter Game</button>
-          </form>
+          <div>
+            <form id="join-game-form">
+              <input
+                aria-required="true"
+                id="name-input"
+                class="text-input"
+                type="text"
+                placeholder="enter name"
+                maxlength="32"
+                autocomplete="username"
+                name="username"
+              />
+              <input
+                aria-required="true"
+                id="game-id-input"
+                class="text-input"
+                type="text"
+                placeholder="enter game id"
+                maxlength="8"
+                name="gameId"
+              />
+              <button type="submit" class="menu-button" id="join-game-submit-btn">Enter Game</button>
+            </form>
+            <form id="create-game-form" style="display: none">
+              <input
+                aria-required="true"
+                id="name-input"
+                class="text-input"
+                type="text"
+                placeholder="Enter your username"
+                maxlength="32"
+                autocomplete="username"
+                name="username"
+              />
+              <div id="create-game-map-size-select">
+                <label>Map size:</label>
+                <select name="mapSize">
+                  <option value="SMALL">Small</option>
+                  <option value="MEDIUM">Medium</option>
+                  <option value="LARGE">Large</option>
+                </select>
+              </div>
+              <button type="submit" class="menu-button" id="details-form-submit-btn">Create Game</button>
+            </form>
+            <button id="switch-screen-btn">create a game</button>
+          </div>
         </div>
         <footer id="start-menu-footer">
           <a href="https://github.com/ZackMurry/raghav-io" rel="noreferrer noopener" target="_blank">GitHub</a>
