Add error messages and fix bugs related to joining games

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,6 +71,7 @@
         </footer>
       </div>
     </div>
+    <div id="error-msg-portal"></div>
     <canvas id="game"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
